--- a/.github/workflows/testtoazure.yml
+++ b/.github/workflows/testtoazure.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_00d3e5e0deac4669949856d83258a013 }}/dsanchezeni/rcda032toazuredevops:${{ github.sha }}
+          tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_00d3e5e0deac4669949856d83258a013 }}/rcda032toazuredevops:${{ github.sha }}
           file: ./Dockerfile
   deploy:
       runs-on: ubuntu-latest
